[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/environment/MovingPlatrofm.gd" type="Script" id=1]
[ext_resource path="res://scenes/environment/TargetPoint.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="BaseMovingPlatrofm" type="KinematicBody2D"]
position = Vector2( 40, 0 )
collision_layer = 4
collision_mask = 17
motion/sync_to_physics = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="TargetPoints" type="Node" parent="."]

[node name="TargetPoint" parent="TargetPoints" instance=ExtResource( 2 )]
position = Vector2( 40, 0 )

[node name="TargetPoint2" parent="TargetPoints" instance=ExtResource( 2 )]
position = Vector2( -40, 0 )
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
